# ChangeLog for app-admin/syslog-ng
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.151 2007/03/14 09:56:00 uberlord Exp $

*syslog-ng-1.6.12-r1 (14 Mar 2007)

  14 Mar 2007; Roy Marples <uberlord@gentoo.org> files/syslog-ng.rc6-r1,
  +syslog-ng-1.6.12-r1.ebuild:
  init script now works on non bash shells.

  16 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  syslog-ng-1.6.11-r1.ebuild, syslog-ng-1.6.12.ebuild:
  remove ROOT use in src_compile (bug #167240)

*syslog-ng-1.6.12 (07 Feb 2007)

  07 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +syslog-ng-1.6.12.ebuild:
  version bump

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> syslog-ng-1.6.11-r1.ebuild:
  amd64 stable, bug 164942

  04 Feb 2007; Markus Rothe <corsair@gentoo.org> syslog-ng-1.6.11-r1.ebuild:
  Stable on ppc64; bug #164942

  02 Feb 2007; Michael Sterrett <mr_bones_@gentoo.org>
  syslog-ng-1.6.11-r1.ebuild:
  stable on x86

  23 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  syslog-ng-1.6.9.ebuild, syslog-ng-1.6.11-r1.ebuild:
  remove portage dep (bug #163507)

  15 Jan 2007; Roy Marples <uberlord@gentoo.org> Manifest:
  Fix Manifest

  15 Jan 2007; Roy Marples <uberlord@gentoo.org> files/syslog-ng.rc6-r1:
  need localmount
  So we can go from single user to multi user.

*syslog-ng-2.0.1 (30 Dec 2006)

  30 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +syslog-ng-2.0.1.ebuild:
  masked version bump

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  syslog-ng-1.6.11-r1.ebuild:
  Stable on ppc.

  18 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  syslog-ng-1.6.11-r1.ebuild:
  Stable on sparc

  06 Dec 2006; Michael Sterrett <mr_bones_@gentoo.org>
  -syslog-ng-1.6.11.ebuild, syslog-ng-1.6.11-r1.ebuild:
  clean up an errant rev bump

  06 Dec 2006; Jeroen Roovers <jer@gentoo.org> syslog-ng-1.6.11-r1.ebuild:
  Stable for HPPA.

*syslog-ng-2.0.0-r1 (29 Nov 2006)