@@ -6,6 +6,10 @@ AUX syslog-ng.conf.gentoo 1067 RMD160 64299262dda24094f3c24ebbba852c4047c5c99f S
 MD5 64a1b2ff422529b8bafc38f12d790376 files/syslog-ng.conf.gentoo 1067
 RMD160 64299262dda24094f3c24ebbba852c4047c5c99f files/syslog-ng.conf.gentoo 1067
 SHA256 5e550f71449450968fe01b2f0f9c99dfb423ee1aeb5804edb67241aa56d72aa5 files/syslog-ng.conf.gentoo 1067
+AUX syslog-ng.conf.gentoo.fbsd 702 RMD160 2fb49bab8ccc7ce763156ef14dbff858d7e6b416 SHA1 1a6bd708009fd6d18516d66a34bd9cb9ec7c3eed SHA256 ab54cc3e5595fad1b362039932ee8a7d7e852ebda3f08bb20ecc19c1be830751
+MD5 37af1755a1b1003fa49b4fd7197e268e files/syslog-ng.conf.gentoo.fbsd 702
+RMD160 2fb49bab8ccc7ce763156ef14dbff858d7e6b416 files/syslog-ng.conf.gentoo.fbsd 702
+SHA256 ab54cc3e5595fad1b362039932ee8a7d7e852ebda3f08bb20ecc19c1be830751 files/syslog-ng.conf.gentoo.fbsd 702
 AUX syslog-ng.conf.gentoo.hardened 4346 RMD160 18932d56ce748454941859dc04c417791184a84d SHA1 8773391798882c4120af039a073d670be5bb9d86 SHA256 110478ff3805ee917488b874fbdbb4b48f9f2b02840f83a0a1d967925ebe3552
 MD5 f33373c704c59b3141123ef16fc3e85d files/syslog-ng.conf.gentoo.hardened 4346
 RMD160 18932d56ce748454941859dc04c417791184a84d files/syslog-ng.conf.gentoo.hardened 4346
@@ -29,7 +33,7 @@ SHA256 45f791f624e2be8ca86aa4d0419a25004b2ef7419ea64654756a3f3de1214144 files/sy
 DIST syslog-ng-1.6.11.tar.gz 712166 RMD160 2ddd5eaae12dbcef4b4e67f83d01a3bab8b2cce0 SHA1 acbee602fd4cb6a1ca40238742642413cd6f1787 SHA256 dd37f1e280bd6c2d66c9a15aa3ee9e209a1b649e3b79e70fee58aea1cb0ea093
 DIST syslog-ng-1.6.12.tar.gz 717903 RMD160 b7a091bd2e6cfa1fd6eea50aee2ef016e8df6c40 SHA1 02bf683cd96f0ec213992a41835af04afb1a4ab7 SHA256 4f46f8ba0e96b3fa7657c84fbef104027c8c713d482fbd6357fc21be3768ae6c
 DIST syslog-ng-1.6.9.tar.gz 765341 RMD160 5220ee5b0859974cdf7e86fd884c1505f91228c6 SHA1 d9e92a9a82fdd5aa4642f0f6b1d164005c91f6f3 SHA256 e7f2d6dbeae17c14245cd20e9893d0144b969d98a29c230d4e8a0c9cc0f7dde9
-DIST syslog-ng-2.0.2.tar.gz 352502 RMD160 6791d28b6692c9a8420d0e2572e5a1fda8640488 SHA1 4fcbe4fc747d1912862e81a977dd1af86e447436 SHA256 6b77a6b2b159afb2a089d70a8b5e6ef0c4e20f1401ba8e392fb99b1293a09d82
+DIST syslog-ng-2.0.3.tar.gz 361194 RMD160 e45d5a4ef226fca20878886e8cbe83eb268ab19b SHA1 a533316117dea87bde16f0492935e91b01f2f1ab SHA256 1369177362151d09f486924ae6b395c53059b7e65d71de4fdd46ab6b8b9bd0a8
 EBUILD syslog-ng-1.6.11-r1.ebuild 1936 RMD160 7ca63adc2613ed97546de60a9e212f33882ef841 SHA1 8d99a976b39d19e04e349df7a59278dde960a216 SHA256 9da2d2f31c305cd5698edf142d6ecf97b5cbfc6a367c2fc71ad6a10c8d832b5b
 MD5 8132657a66cd73c28d24252f7995774d syslog-ng-1.6.11-r1.ebuild 1936
 RMD160 7ca63adc2613ed97546de60a9e212f33882ef841 syslog-ng-1.6.11-r1.ebuild 1936
@@ -42,14 +46,14 @@ EBUILD syslog-ng-1.6.9.ebuild 1976 RMD160 50c398505a5cb046eb83263934779b4678a3a5
 MD5 c1056780c8fa40007a16723b95e8642b syslog-ng-1.6.9.ebuild 1976
 RMD160 50c398505a5cb046eb83263934779b4678a3a511 syslog-ng-1.6.9.ebuild 1976
 SHA256 b8f88b04256e51809071f3c84e915c8f6b6d6c241975ee30df9a13274c9caa81 syslog-ng-1.6.9.ebuild 1976
-EBUILD syslog-ng-2.0.2.ebuild 1954 RMD160 20bd42fa56547b8c1c3fd5abe8e68c2792ebc548 SHA1 9d2fcae5b6d9d68184e8b3eb2b8b220eaa36ce2f SHA256 97f4597d0b66e5b69cf6916b1a9046a6ccbb2164d032bcd39b907364c299f568
-MD5 d5b628155158878bfcd3d3142bab3c43 syslog-ng-2.0.2.ebuild 1954
-RMD160 20bd42fa56547b8c1c3fd5abe8e68c2792ebc548 syslog-ng-2.0.2.ebuild 1954
-SHA256 97f4597d0b66e5b69cf6916b1a9046a6ccbb2164d032bcd39b907364c299f568 syslog-ng-2.0.2.ebuild 1954
-MISC ChangeLog 20072 RMD160 df9e53ec9a984c9589ae1df1bfc0f798ede10342 SHA1 507356df85fd66539e7e73b972cd84137948cf86 SHA256 2587e9874ae7bb2c7c19323c76ec7071141ea74ae1fc7e37c0f871fc0e7eb5c8
-MD5 9d74e9a745b56eb65d324692ef625e0b ChangeLog 20072
-RMD160 df9e53ec9a984c9589ae1df1bfc0f798ede10342 ChangeLog 20072
-SHA256 2587e9874ae7bb2c7c19323c76ec7071141ea74ae1fc7e37c0f871fc0e7eb5c8 ChangeLog 20072
+EBUILD syslog-ng-2.0.3.ebuild 2207 RMD160 ac1abeaf4107afba7dadbe2ea8f638b9c9b9607e SHA1 4018a9b619be9dd8169adbc5d045e7c2eef9bc6f SHA256 1f2cb43052eec53edb8b101170002c85f8ae333114c2379c288442c26bb6650c
+MD5 1841e9a7d5abadd74e77073ec03f11b4 syslog-ng-2.0.3.ebuild 2207
+RMD160 ac1abeaf4107afba7dadbe2ea8f638b9c9b9607e syslog-ng-2.0.3.ebuild 2207
+SHA256 1f2cb43052eec53edb8b101170002c85f8ae333114c2379c288442c26bb6650c syslog-ng-2.0.3.ebuild 2207
+MISC ChangeLog 20382 RMD160 0b0d7f62702c9426bf6c0de50839e09a41851565 SHA1 2ec30fd45295c73ac660cac4d4cb411e0e0bd3c2 SHA256 b0ab67d3d3dc4e79dcee0b3aec74c5fad0ec9bccfa07c2366c676724dfbb67c3
+MD5 597bf78906543404bd0705c81e3dc8e7 ChangeLog 20382
+RMD160 0b0d7f62702c9426bf6c0de50839e09a41851565 ChangeLog 20382
+SHA256 b0ab67d3d3dc4e79dcee0b3aec74c5fad0ec9bccfa07c2366c676724dfbb67c3 ChangeLog 20382
 MISC metadata.xml 255 RMD160 53f4041a04a683c1e6380721a5207730d986491f SHA1 6321fb4f7568a7f34494c3b8296c7c4d656a8dde SHA256 dbf6d5b64056da60b0e445af0dadc10592b84ed97e38b9c95acb9d723dcc98a3
 MD5 ac145feedb4b5bc6a7ea80d08994c5aa metadata.xml 255
 RMD160 53f4041a04a683c1e6380721a5207730d986491f metadata.xml 255
@@ -63,6 +67,6 @@ SHA256 1730a039e0126575f8c675e42aac189274a9927b33c0993eadc6c330283310c7 files/di
 MD5 b481e7ac2702faefd67cf6266d9c6a5b files/digest-syslog-ng-1.6.9 247
 RMD160 b5be057a8fd361d942d01fe19d7af4cbf95deadc files/digest-syslog-ng-1.6.9 247
 SHA256 138e95860913ab20fa8c785e48308d51bb6448136f24e60f0ffd35ff489fb853 files/digest-syslog-ng-1.6.9 247
-MD5 edd23c6d995f7873aca2543453bf40c9 files/digest-syslog-ng-2.0.2 247
-RMD160 87831ad10a441f770ab6c5f5561e8845642fefd5 files/digest-syslog-ng-2.0.2 247
-SHA256 f566d51d602fb3d1317a1d1ac0e8a653710f6ceb627df97f8cff85532a08f0bd files/digest-syslog-ng-2.0.2 247
+MD5 69a75805bac187e06b7338d2136e968d files/digest-syslog-ng-2.0.3 247
+RMD160 197c3dbac94748cc76dd9f11f28aeec05c7e10ce files/digest-syslog-ng-2.0.3 247
+SHA256 be961278ee72dd84f1d12f91c9f70b8776cc8c3732a1bd995d75186e0408cc99 files/digest-syslog-ng-2.0.3 247
