@@ -1,3 +1,0 @@
-MD5 7ef12e1e43a99c5b6b8d1984dde72151 syslog-ng-2.0.2.tar.gz 352502
-RMD160 6791d28b6692c9a8420d0e2572e5a1fda8640488 syslog-ng-2.0.2.tar.gz 352502
-SHA256 6b77a6b2b159afb2a089d70a8b5e6ef0c4e20f1401ba8e392fb99b1293a09d82 syslog-ng-2.0.2.tar.gz 352502
