@@ -1,0 +1,3 @@
+MD5 01cafcfebf1c05f9253c3f3c9a987434 syslog-ng-2.0.3.tar.gz 361194
+RMD160 e45d5a4ef226fca20878886e8cbe83eb268ab19b syslog-ng-2.0.3.tar.gz 361194
+SHA256 1369177362151d09f486924ae6b395c53059b7e65d71de4fdd46ab6b8b9bd0a8 syslog-ng-2.0.3.tar.gz 361194
