@@ -1,0 +1,20 @@
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/files/syslog-ng.conf.gentoo.fbsd,v 1.1 2007/03/27 07:38:41 mr_bones_ Exp $
+#
+# Syslog-ng default configuration file for Gentoo FreeBSD
+# contributed by Tiziano MÃ¼lle
+options {
+	chain_hostnames(off);
+	sync(0);
+
+	# The default action of syslog-ng 1.6.0 is to log a STATS line
+	# to the file every 10 minutes.  That's pretty ugly after a while.
+	# Change it to every 12 hours so you get a nice daily update of
+	# how many messages syslog-ng missed (0).
+	stats(43200);
+};
+
+source src { unix-dgram("/var/run/log"); file("/dev/klog"); internal(); };
+
+destination messages { file("/var/log/messages"); };
+
+log { source(src); destination(messages); };
