@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/syslog-ng-2.0.2.ebuild,v 1.1 2007/01/30 04:17:47 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/syslog-ng-2.0.3.ebuild,v 1.1 2007/03/27 07:38:41 mr_bones_ Exp $
 
 inherit fixheadtails
 
@@ -12,9 +12,11 @@ SRC_URI="http://www.balabit.com/downloads/syslog-ng/2.0/src/${PN}-${MY_PV}.tar.g
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
-IUSE="hardened selinux static ipv6"
+IUSE="hardened ipv6 selinux spoof-source static tcpd"
 
 RDEPEND=">=dev-libs/eventlog-0.2
+	spoof-source? ( net-libs/libnet )
+	tcpd? ( >=sys-apps/tcp-wrappers-7.6 )
 	>=dev-libs/glib-2.2"
 DEPEND="${RDEPEND}
 	sys-devel/flex"
@@ -37,6 +39,8 @@ src_compile() {
 		$(use_enable ipv6) \
 		$(use_enable !static dynamic-linking) \
 		$(use_enable static static-linking) \
+		$(use_enable spoof-source) \
+		$(use_enable tcpd tcp-wrapper) \
 		|| die
 	emake || die "emake failed"
 }
@@ -55,6 +59,8 @@ src_install() {
 	insinto /etc/syslog-ng
 	if use hardened || use selinux ; then
 		newins "${FILESDIR}/syslog-ng.conf.gentoo.hardened" syslog-ng.conf
+	elif use userland_BSD ; then
+		newins "${FILESDIR}/syslog-ng.conf.gentoo.fbsd" syslog-ng.conf
 	else
 		newins "${FILESDIR}/syslog-ng.conf.gentoo" syslog-ng.conf
 	fi
